[package]

name = "bolts"
description = "A rust static site generator"
repository = "https://github.com/ryanr1230/bolts"
version = "0.1.0"
authors = ["Ryan Rice <ryanr1230@gmail.com>"]
license = "MIT"

[lib]

name = "bolts"
path = "src/lib.rs"

[[bin]]
name = "bolts"
path = "src/main.rs"

[dependencies]

hoedown = "3.0.3"
rustc-serialize = "0.3.16"
getopts = "0.2"

[dependencies.rumblebars]
git = "https://github.com/nicolas-cherel/rumblebars.git"
